--- a/templates/login.html
+++ b/templates/login.html
@@ -2,9 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <h1>LOG IN</h1>
+    <title>Log In</title>
 </head>
 <body>
-    <P>LOG IN</P>
+    
 </body>
 </html>
