--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -2,10 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
     <h1>Welcome</h1>
 </head>
 <body>
-    
+    <a href="/login "> <button type="button">Log in</button></a>
+    <a href="/signup "> <button type="button">Sign up</button></a>
 </body>
 </html>
