SIGN IN AND LOG IN BASICS

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,14 @@
     <title>Log In</title>
 </head>
 <body>
-    
+    <form action="/submitlog" method="POST">
+    <label for="email">Email</label>
+    <input type="email" name="email" id="email" placeholder="example@gmail.com"> <br>
+    <label for="password">Password</label>
+    <input type="password" name="password" id="password" placeholder="********"> <br>
+
+    <button type="submit">Done</button>
+
+    </form> 
 </body>
 </html>
