Trade stats and trade database
Izveidoju tirgojumu ievadlaukus un funkciju saglabāt tos datubāzē

--- a/templates/journal.html
+++ b/templates/journal.html
@@ -3,11 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <h1>Trading Journal</h1>
+    <h1>{{email[0][0]}}</h1>
 </head>
 <body>
-    <a href="/login"><button type="button">Log Out</button></a>
-    <a href="/journal"><button type="button">My Journal</button></a>
-    
+    <a href="/home"><button type="button">Back</button></a>
+    <a href="/new_trade"><button type="button">New Trade</button></a>
 </body>
 </html>
