Kalendāra fukcijonalitātes izstrāde

--- a/templates/journal.html
+++ b/templates/journal.html
@@ -3,10 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <h1>{{email[0][0]}}</h1>
+    <h1>Journal</h1>
 </head>
 <body>
+    {{mytrades}}
+    {{full_calendar| safe }}
     <a href="/home"><button type="button">Back</button></a>
-    <a href="/new_trade"><button type="button">New Trade</button></a>
+    
 </body>
 </html>
