--- a/templates/journal.html
+++ b/templates/journal.html
@@ -3,11 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <h1>Journal</h1>
 </head>
 <body>
-    {{mytrades}}
+    <div class="calendar-container">
     {{full_calendar| safe }}
+    </div>
+    {{pnl}}
     <a href="/home"><button type="button">Back</button></a>
     
 </body>
