--- a/templates/journal.html
+++ b/templates/journal.html
@@ -2,16 +2,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <h1>Journal</h1>
+    <title>Journal</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style_journal.css') }}">
 </head>
 <body>
-    <div class="calendar-container">
-    {{full_calendar| safe }}
+
+<h1>Journal</h1>
+
+<div class="calendar-container"> 
+    <div class="selecter">
+        <form method="POST" action="/journal">
+            <label for="month">Select Month:</label>
+            <select name="month" id="utility">
+                {% for m in range(1, 13) %}
+                    <option  value="{{ m }}" {% if m == month %}selected{% endif %}>{{ m }}</option>
+                {% endfor %}
+            </select>
+        
+            <label for="year">Select Year:</label>
+            <input type="number" name="year" id="utility" value="{{ year }}" min="2000" max="2100">
+        
+            <button type="submit" id="utility">Confirm</button>
+        </form>
     </div>
-    {{pnl}}
-    <a href="/home"><button type="button">Back</button></a>
-    
+
+    <div class="calendar">
+        {{ full_calendar | safe }}
+    </div>
+</div>
+
+<a href="/home" ><button type="button" id="utility">Back</button></a>
+
 </body>
 </html>
