--- a/templates/newtrade.html
+++ b/templates/newtrade.html
@@ -26,23 +26,23 @@
             <label for="sell">Sell</label>
         </div>
         
-        <!-- Win/Loss Radio Buttons -->
+        
         <div class="radio-group">
-            <input type="radio" id="win" name="win_loss" value="Win" required>
+            <input type="radio" id="win" name="win_loss" value="win" >
             <label for="win">Win</label>
         
-            <input type="radio" id="loss" name="win_loss" value="Loss" required>
+            <input type="radio" id="loss" name="win_loss" value="loss" >
             <label for="loss">Loss</label>
         
-            <!-- Profit/Loss Input Fields -->
+            
             <div class="profit-container">
                 <label for="profit">Profit €</label>
-                <input type="number" name="profit" id="profit">
+                <input type="number" name="profit" id="profit" >
             </div>
         
             <div class="deficit-container">
                 <label for="deficit">Loss €</label>
-                <input type="number" name="deficit" id="deficit">
+                <input type="number" name="deficit" id="deficit" >
             </div>
         </div>
         
