--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <h1>Trading Journal</h1>
+    <h1>Home</h1>
 </head>
 <body>
-    <a href="/login"><button type="button">Log Out</button></a>
-    <a href="/journal"><button type="button">My Journal</button></a>
     
+    <a href="/journal"><button type="button">My Journal</button></a>
+    <a href="/analytics"><button type="button">Trading Analytics</button></a>
+    <a href="/login"><button type="button">Log Out</button></a>
 </body>
 </html>
