--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,23 +1,25 @@
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <h1>Sign Up</h1>
-    
+    <link rel="stylesheet" href="{{ url_for('static', filename='style_auth.css') }}">
 </head>
 <body>
-    
-    <form action="/sumbit" method="POST">
-        <p style="color: red;">{{message}}</p> 
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" placeholder="example@gmail.com" required> <br>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" placeholder="********" required><br> <br>
-        
-    <button type="submit">Done</button>  
-    
-    </form>
-    <p>Already have an account?  <a href="/login"  ><button type="button">Log In</button></a></p>
+    <h1>Sign Up</h1>
+    <div class="auth-form">
+        <p class="error-message">{{message}}</p>
+        <form action="/submit" method="POST">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" placeholder="example@gmail.com" required>
+            
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" placeholder="********" required>
+            
+        <button type="submit">Sign Up</button>
+        </form>
+    </div>
+    <div class="auth-footer">
+        <p>Already have an account?</p>
+        <a href="/login" class="auth-link">Log In</a>
+    </div>
 </body>
-</html>
