--- a/templates/error.html
+++ b/templates/error.html
@@ -5,6 +5,7 @@
     <title>Document</title>
     <h1>error</h1>
     <h2>{{message}}</h2>
+    <a href="/home"><button type="button">Back</button></a>
 </head>
 <body>
     
