--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,7 +13,7 @@
             <input type="email" name="email" id="email" placeholder="example@gmail.com" required>
             
             <label for="password">Password</label>
-            <input type="password" name="password" id="password" placeholder="********" required>
+            <input type="password" name="password" id="password" placeholder="********" minlength="8" required>
             
         <button type="submit">Sign Up</button>
         </form>
